--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ select:focus::-ms-value {
 /* Home Container */
 #home>#banner {
     width: 100%;
-    height: 81vh;
+    height: 80vh;
     padding-top: 30px;
     margin-top: 30px;
     background-image: url(../image/saad_al_amin.jpeg);
@@ -382,6 +382,7 @@ select:focus::-ms-value {
     width: 39%;
     position: absolute;
     left: 14%;
+    transform: rotate(2deg);
 }
 
 #home #right-ctx p {
@@ -389,16 +390,17 @@ select:focus::-ms-value {
 }
 
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 200px) {
     #home>#banner {
-        height: 120vw;
+        height: 125vw;
         background-size: 100% 100%;
+        background-position: 0 -25px;
     }
 }
 
 @media screen and (min-width: 450px) {
     #home #right-ctx {
-        top: 44.0vw;
+        top: 35.0vw;
     }
 
     #home #left-ctx {
@@ -408,7 +410,7 @@ select:focus::-ms-value {
 
 @media screen and (min-width: 500px) {
     #home #left-ctx {
-        top: 99vw;
+        top: 89vw;
     }
 }
 
@@ -624,7 +626,8 @@ img:hover {
     height: auto;
     background: #444444;
     color: #fff;
-    padding-top: 20px;
+    padding-top: 25px;
+    padding-bottom: 15px;
 }
 
 #footer #main {
