--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 * {
-    font-family: var(--font);
+    font-family: "Poppins", sans-serif;
 }
 
 h1,
@@ -348,7 +348,7 @@ select:focus::-ms-value {
     margin-top: 30px;
     background-image: url(../image/saad_al_amin.jpeg);
     background-size: 100% 100%;
-    background-attachment: scroll;
+    background-repeat: no-repeat;
 }
 
 #home #left-ctx,
