--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Poppins, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-family: "Poppins", sans-serif;
-    background-color: var(--light);
+    background-color: #fff;
     color: #000;
 }
 
@@ -623,9 +623,9 @@ img:hover {
 /* Footer */
 #footer {
     width: 100%;
-    height: auto;
-    background: #444444;
-    color: #fff;
+    height: 100%;
+    background: #fff;
+    color: #444;
     padding-top: 25px;
     padding-bottom: 15px;
 }
@@ -639,8 +639,8 @@ img:hover {
 #footer p {
     padding: 2px;
     text-transform: uppercase;
-    background: #fff;
-    color: #333;
+    background: #444;
+    color: #fff;
     margin: 0 auto;
     width: 150px;
     font-size: 0.9rem;
@@ -663,14 +663,13 @@ img:hover {
     border-radius: 100rem;
     margin-left: 17px;
     margin-top: 10px;
-    background: transparent;
-
+    background: var(--light);
 }
 
 #footer .follow a img {
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: #444;
     border-radius: 100rem
 }
 
