--- a/css/style.css
+++ b/css/style.css
@@ -605,10 +605,13 @@ img:hover {
 
 #about,
 #contact {
-    height: auto;
-    background-image: url(../image/saad_al_amin.jpeg);
-    background-size: contain;
+    width: 100%;
+    height: 80vh;
     padding-top: 0 !important;
+    margin-top: 30px;
+    background-image: url(../image/saad_al_amin.jpeg);
+    background-size: 100% 160vw;
+    background-repeat: no-repeat;
 }
 
 #about>#main,
@@ -616,18 +619,19 @@ img:hover {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .2);
-    backdrop-filter: blur(15px);
-    -moz-backdrop-filter: blur(15px);
+    backdrop-filter: blur(10px);
+    -moz-backdrop-filter: blur(10px);
 }
 
 /* Footer */
 #footer {
     width: 100%;
-    height: 100%;
+    height: auto;
     background: #fff;
     color: #444;
     padding-top: 25px;
     padding-bottom: 15px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 }
 
 #footer #main {
@@ -725,6 +729,32 @@ img:hover {
 
 #footer .follow a:nth-child(13) img {
     background: #cc2288;
+}
+
+@media screen and (max-width: 900px) {
+    #footer .follow a:nth-child(4) {
+        display: none;
+    }
+
+    #footer .follow a:nth-child(5) {
+        display: none;
+    }
+
+    #footer .follow a:nth-child(6) {
+        display: none;
+    }
+
+    #footer .follow a:nth-child(11) {
+        display: none;
+    }
+
+    #footer .follow a:nth-child(12) {
+        display: none;
+    }
+
+    #footer .follow a:nth-child(13) {
+        display: none;
+    }
 }
 
 #footer .copyright {
